--- a/manifest.json
+++ b/manifest.json
@@ -21,27 +21,23 @@
 		"url": "http://www.dcloud.io"
 	},
 	"permissions": {
-		"Cache": {
-			"description": "管理应用缓存"
-		},
-		"Console": {
-			"description": "跟踪调试输出日志"
-		},
-		"Contacts": {
-			"description": "访问系统联系人信息"
-		},
-		"Events": {
-			"description": "应用扩展事件"
-		},
-		"Messaging": {
-			"description": "访问通讯能力"
-		},
-		"Maps": {
-			"description": "管理地图插件"
-		},
-		"Speech": {
-			"description": "管理语音识别插件"
-		}
+        "Cache": {
+            "description": "管理应用缓存"
+        },
+        "Console": {
+            "description": "跟踪调试输出日志"
+        },
+        
+        "Events": {
+            "description": "应用扩展事件"
+        },
+        "Messaging": {
+            "description": "访问通讯能力"
+        },
+        
+        "Speech": {
+            "description": "管理语音识别插件"
+        }
 	},
 	"plus": {
 		"splashscreen": {
@@ -65,32 +61,7 @@
 				"keystore": "",/*Android应用打包使用的密钥库文件*/
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
-				"permissions": [
-					"<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
-					"<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
-					"<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
-					"<uses-permission android:name=\"android.permission.VIBRATE\"/>",
-					"<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
-					"<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
-					"<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
-					"<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>",
-					"<uses-permission android:name=\"android.permission.CAMERA\"/>",
-					"<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
-					"<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
-					"<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
-					"<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>",
-					"<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
-					"<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
-					"<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
-					"<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
-					"<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>",
-					"<uses-feature android:name=\"android.hardware.camera\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
-					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
-				]
+				"permissions": ["<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>","<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>","<uses-permission android:name=\"android.permission.VIBRATE\"/>","<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>","<uses-permission android:name=\"android.permission.CALL_PHONE\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>","<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>"]
 			},
 			"orientation": ["portrait-primary"],/*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
 			"icons": {
@@ -168,12 +139,12 @@
 				"android": {
 					"mdpi": "", /*普通屏启动图片，分辨率：240x282*/
 					"ldpi": "", /*大屏启动图片，分辨率：320x442*/
-					"hdpi": "//192.168.1.195/workspace/Projects/20180701_DCAR/UI/App/App  icon/LaunchImage-800-667h@2x.png", /*高分屏启动图片，分辨率：480x762*/
-					"xhdpi": "//192.168.1.195/workspace/Projects/20180701_DCAR/UI/App/App  icon/LaunchImage-800-667h@2x.png", /*720P高分屏启动图片，分辨率：720x1242*/
-					"xxhdpi": "//192.168.1.195/workspace/Projects/20180701_DCAR/UI/App/App  icon/LaunchImage-800-667h@2x.png"
+					"hdpi": "D:/dabao/Dcar-Icon-Store 13项/LaunchImage-800-667h@2x.png", /*高分屏启动图片，分辨率：480x762*/
+					"xhdpi": "D:/dabao/Dcar-Icon-Store 13项/LaunchImage-800-667h@2x.png", /*720P高分屏启动图片，分辨率：720x1242*/
+					"xxhdpi": "D:/dabao/Dcar-Icon-Store 13项/LaunchImage-800-667h@2x.png"
 				}
 			}
-		}
+		},"adid":"120379230408"
 	},
 	"dependencies": {
 		"pages": {
