--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ unpackage/.confirmed_dependencies
 manifest.json
 unpackage/release/dcar-app0930.ipa
 manifest.json
+unpackage/.confirmed_dependencies
+unpackage/release/dcar-app1011.ipa
+manifest.json
