--- a/manifest.json
+++ b/manifest.json
@@ -372,6 +372,13 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"users/ethTransfer.html": {
+				"resources": [],
+				"refer": [
+					"users/barcodeAddress.html"
+				],
+				"priority": 0
 			}
 		},
 		"idle": {
